src/app/components/label-field/label-field.component.scss
:host {

  display: block;
  position: relative;

  &.field-top-margin {
    .field-label {
      height: 13px;
    }
  }

  &.field-label-margin {
    .field-label {
      margin-bottom: 5px;
    }
  }

  &.field-bottom-margin {
    .field-wrap {

    }
    .field-message {
      min-height: 14px;
      margin-top: 5px;
    }
  }

  ::ng-deep fs-label {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    display: block;
  }
}

.field-label:empty {
  display: none;
}

.field-message {
  font-size: 75%;
  color: rgba(0, 0, 0, 0.54);
}

